# federalnet

./: .env.production.example  .gitignore  DEPLOYMENT_SUMMARY.md  README.md  docker-compose.prod.yml
.github/workflows/: README.md  build-admin-app-apk.yml  deploy-backend-to-vps.yml  rust.yml
backend/federalnet-api/: .dockerignore  .env  Cargo.toml  Dockerfile
backend/federalnet-api/src/: auth.rs  main.rs  models.rs
deployment/: CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  TESTING_GUIDE.md  VPS_DEPLOYMENT.md  deploy-vps.sh
deployment/nginx/: nginx.conf
docker/: FederalNet schema documentation.md  add_internet_plans_table.sql  add_nas_owner_id.sql  add_owner_wallet_idempotency.sql  add_owner_wallets.sql  add_plan_billing.sql  add_user_types.sql  create_owner_income.sql  docker-compose.dev.yml  federalnet_schema.sql  owner_gateways.sql  phpnuxbill.sql  rad_db_user.sql  schema.sql  wunthofederalnet.sql
docs/: IMPLEMENTATION_SUMMARY.md  api-internet-plans-nas.md  federalnet.sql  internet-plans-usage-guide.md  note.md  nrc_instructions.md  owner-login-topup.md  project-requirements.md  test-plan-api.md  test-plan-frontend.md  vps_freeradius_setup.md
frontend/: README.md
frontend/admin_app/: README.md  (+1 more)
scripts/: build_debug_apks.sh  create_wunthofederalnet.sql  deploy-federalnet-api.sh  deploy_instructions.md  import_schema_to_vps.sh  scp_rad_dump.ps1  vps_deploy_backend.sh  vps_freeradius_checks_and_fix.sh  vps_import_and_config.sh  vps_setup_db.sh
tmp/: apply_all_migrations.sh  apply_one.sh  check_migrations.sh  federalnet-env.tmp
(+66 files in other folders)
