[package]
name = "federalnet-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
bigdecimal = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "mysql", "macros", "chrono", "bigdecimal"] }

dotenvy = "0.15"
jsonwebtoken = "9"
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
uuid = { version = "1.10", features = ["v4", "serde"] }
env_logger = "0.11"
log = "0.4"
